--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,9 +27,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: export APP_ENV="prod"
       - run: npm ci
-      - run: npm run build --if-present
+      - run: APP_ENV="prod npm run build --if-present
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
