--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: export APP_ENV="prod"
+      - run: echo $NODE_ENV
       - run: npm ci
       - run: npm run build --if-present
       - name: Upload artifact
